cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Evie Ciobanu
maintainer:         me@eevie.ro

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Day1
                    , Day2
                    , Day3
                    , Day4
                    , Day5
                    , Day6
                    , Day7
                    , Day8
                    , Day9
                    , Day10
                    , Day11
                    , Day12
                    , Day13
                    , Day14
                    , Day15
                    , Day16


    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      extra,
                      hashable,
                      megaparsec,
                      newtype-generics,
                      transformers,
                      search-algorithms,
                      unordered-containers,
                      text
    hs-source-dirs:   lib
    default-language: Haskell2010

executable aoc2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        aoc2021,

    hs-source-dirs:   app
    default-language: Haskell2010
